# rust-station

./: .gitignore  AGENTS.md  CLAUDE.md  CLEANUP_TODO.md  Cargo.toml  DAILY_TESTING.md  GEMINI.md  GPUI_MIGRATION_PROGRESS.md  ISSUES.md  OLD_UI_ANALYSIS.md  PHASE_5_SUMMARY.md  PHASE_6_PLAN.md  ROADMAP.md  TODOS.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  speckit
.agent-backups/: CLAUDE.md.backup
.claude/: mini-tui-architecture.md  settings.local.json
.claude/agents/: reader.md  spec-analyzer.md  spec-implementer.md  spec-planner.md  spec-writer.md  writer.md
.gemini/: settings.json
crates/rstn/: Cargo.toml  (+1 more)
crates/rstn-tui/: Cargo.toml
crates/rstn-tui/src/: lib.rs
crates/rstn-ui/: Cargo.toml
crates/rstn-ui/src/: components.rs  lib.rs  theme.rs
crates/rstn-views/: Cargo.toml
crates/rstn-views/src/: chat.rs  dockers.rs  explorer.rs  lib.rs  mcp.rs  settings.rs  tasks.rs  terminal.rs  workflows.rs
desktop/: E2E_ARCHITECTURE_UPDATE_REPORT.md  package.json  vitest.config.ts
dev-docs/: README.md
docs/: README.md  index.md
e2e/: README.md  agent-rules.spec.ts  change-management.spec.ts  claude-code.spec.ts  constitution-workflow.spec.ts  electron.fixture.ts  generate-screenshots.ts  md3-visual-regression.spec.ts  mock-docker.spec.ts  review-gate.spec.ts  screenshots.spec.ts  test-helpers.ts  workflows-page.spec.ts
kb/: .redirects.json  00-index.md  README.md  claude-code-cli-reference.md
kb-backup-20251221/: 00-index.md
openspec/: AGENTS.md  project.md
specs/: README.md  features.json
tasks/: 04-prompt-claude-workflow.md
(+500 files in other folders)
