[package]
name = "rstn-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TUI interface for rstn development toolkit"

[lib]
name = "rstn_tui"
path = "src/lib.rs"

[dependencies]
# Inter-crate dependencies
rstn-core = { workspace = true }

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Clipboard support
arboard = "3.4"
