[package]
name = "rstn-ui"
version = "0.1.0"
edition = "2021"
description = "UI component library for rustation"
license = "MIT"

[dependencies]
# GPUI framework
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }

# Serialization (for theme configuration)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
