[package]
name = "rstn-views"
version = "0.1.0"
edition = "2021"
description = "Feature views for rustation"
license = "MIT"

[dependencies]
# GPUI framework
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui" }

# Core library
rstn-core = { path = "../rstn-core" }
rstn-ui = { path = "../rstn-ui" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
